Add overall HTTP timeout for RRDP loading